fixed spacing between buttons

--- a/css/css_playground.css
+++ b/css/css_playground.css
@@ -44,8 +44,7 @@
 	background-color: aqua;
 	height: 50px;
 	width: 50px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin: 10px 10px 10px 0px;
 }
 
 .button2:active {
@@ -56,6 +55,7 @@
 	height: 50px;
 	width: 50px;
 	border: 0;
+	margin: 10px 10px 10px 0px;
 }
 
 .button3:hover {
